# deluge-rpc

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  release-please-config.json  test_expect
deluge-cli/: Cargo.toml
deluge-cli/src/: cli_config.rs  config.rs  helpers.rs  main.rs  record.rs  run.rs
deluge-cli/src/commands/: call.rs  core.rs  daemon.rs  mod.rs  plugins.rs  status.rs
deluge-cli/src/recording/: cassette.rs  interaction.rs  mod.rs  recorder.rs
deluge-cli/tests/: integration_tests.rs
deluge-rencode/: Cargo.toml  README.md
deluge-rencode/src/: error.rs  json.rs  ser.rs  value.rs
deluge-retain/: Cargo.toml
deluge-retain/src/: cli.rs  engine.rs  lib.rs  main.rs  policy.rs  tracing_setup.rs
deluge-retain/src/config/: config.rs  host_config.rs  mod.rs  rules.rs
deluge-retain/tests/: e2e.rs
deluge-retain/tests/common/: cassettes.rs  mock_daemon.rs  mod.rs
deluge-rpc/: Cargo.toml  README.md
deluge-rpc-client/: Cargo.toml  README.md
deluge-rpc-client/docs/: FIXTURE-COVERAGE.md  SPEC-core-session.md  SPEC-core-torrents.md  SPEC-daemon.md  SPEC-plugins.md  SPEC.md
deluge-rpc-client/fixtures/: accounts.json  autoadd.json  blocklist.json  config-methods.json  daemon-methods.json  execute.json  extractor.json  label.json  live-daemon.json  misc-methods.json  notifications.json  plugins-manage.json  scheduler.json  session-methods.json  stats.json  toggle.json  torrent-add.json  torrent-lifecycle.json  torrent-ops.json  webui.json
deluge-rpc-client/src/: error.rs  lib.rs  recorder.rs
deluge-rpc-client/src/client/: builder.rs  client.rs  connection.rs  dispatcher.rs  info.rs  manager.rs  mod.rs
deluge-rpc-client/src/client/events/: mod.rs  parse_event.rs  reader_loop.rs  stream.rs
deluge-rpc-client/src/client/routes/: daemon.rs  mod.rs
deluge-rpc-client/src/client/routes/core/: accounts.rs  config.rs  misc.rs  mod.rs  plugins.rs  session.rs  torrents.rs
deluge-rpc-client/src/client/routes/plugins/: auto_add.rs  blocklist.rs  execute.rs  extractor.rs  label.rs  mod.rs  notifications.rs  scheduler.rs  stats.rs  toggle.rs  webui.rs
deluge-rpc-client/src/protocol/: error.rs  helpers.rs  message.rs  mod.rs
deluge-rpc-client/src/transport/: constants.rs  error.rs  reader.rs  transport.rs  writer.rs
deluge-rpc-client/tests/: AGENTS.md  accounts.rs  autoadd.rs  blocklist.rs  config_methods.rs  daemon_methods.rs  execute.rs  extractor.rs  label.rs  live_daemon.rs  misc_methods.rs  notifications.rs  plugins_manage.rs  scheduler.rs  session_methods.rs  stats.rs  toggle.rs  torrent_add.rs  torrent_lifecycle.rs  torrent_ops.rs  webui.rs
deluge-rpc-client/tests/common/: mod.rs
deluge-rpc-mock/: Cargo.toml
deluge-rpc-mock/fixtures/: free_space_high.json  free_space_low.json  login_bad.json  login_ok.json  torrents_list.json
deluge-rpc-mock/src/: cassette.rs  lib.rs  matcher.rs  replay.rs
deluge-rpc-mock/src/cassette/: cassette.rs  interaction.rs  mod.rs
deluge-rpc-mock/src/server/: connection.rs  constants.rs  helpers.rs  matcher.rs  mod.rs  read_frame.rs  server.rs  write_frame.rs
deluge-rpc-mock/tests/: e2e_tests.rs  live_daemon_e2e.rs
deluge-rpc-models/: Cargo.toml  README.md
deluge-rpc-models/src/: events.rs  lib.rs  sentinels.rs
deluge-rpc-models/src/config/: account.rs  completion_paths.rs  daemon_config.rs  mod.rs  proxy.rs
deluge-rpc-models/src/misc/: create_torrent.rs  glob.rs
deluge-rpc-models/src/plugins/: autoadd.rs  blocklist.rs  execute.rs  extractor.rs  label.rs  mod.rs  notifications.rs  scheduler.rs  stats.rs  webui.rs
deluge-rpc-models/src/session/: mod.rs  status.rs
deluge-rpc-models/src/torrents/: entry.rs  filter.rs  methods.rs  mod.rs  options.rs  status.rs  sub_dicts.rs
deluge-rpc-rencode/: Cargo.toml  README.md
deluge-rpc/docs/: FIXTURE-COVERAGE.md  METHOD-COVERAGE.md  SPEC-core-session.md  SPEC-plugins.md  SPEC.md
deluge-rpc/src/: client.rs  connection.rs  deluge_rpc_client.rs  error.rs  lib.rs  parse.rs  recorder.rs  rpc.rs  torrent.rs  wire.rs
deluge-rpc/src/client/: builder.rs  caller.rs  client.rs  connection.rs  daemon.rs  deluge_client.rs  dispatch.rs  dispatcher.rs  error.rs  info.rs  inner.rs  manager.rs  mod.rs  rpc_caller.rs  shared.rs
deluge-rpc/src/client/core/: accounts.rs  config.rs  misc.rs  mod.rs  plugins.rs  session.rs  torrents.rs
deluge-rpc/src/client/core/torrents/: tests.rs
deluge-rpc/src/client/plugins/: autoadd.rs  blocklist.rs  execute.rs  extractor.rs  label.rs  mod.rs  notifications.rs  scheduler.rs  stats.rs  toggle.rs  webui.rs
deluge-rpc/src/client/routes/: daemon.rs
deluge-rpc/src/client/routes/core/: accounts.rs  config.rs  misc.rs  mod.rs  plugins.rs  session.rs  torrents.rs
deluge-rpc/src/client/routes/plugins/: auto_add.rs  blocklist.rs  execute.rs  extractor.rs  label.rs  mod.rs  notifications.rs  scheduler.rs  stats.rs  toggle.rs  webui.rs
deluge-rpc/src/models/: dict_values.rs  mod.rs  sentinels.rs  torrent_info.rs
deluge-rpc/src/models/config/: account.rs  completion_paths.rs  daemon_config.rs  proxy.rs
deluge-rpc/src/models/misc/: create_torrent.rs  glob.rs  mod.rs
deluge-rpc/src/models/plugins/: autoadd.rs  blocklist.rs  execute.rs  extractor.rs  label.rs  mod.rs  notifications.rs  scheduler.rs  stats.rs  toggle.rs  webui.rs
deluge-rpc/src/models/session/: status.rs
deluge-rpc/src/models/torrents/: entry.rs  methods.rs  mod.rs  status.rs  sub_dicts.rs
deluge-rpc/src/protocol/: error.rs  helpers.rs  message.rs  mod.rs  request.rs  response.rs
deluge-rpc/src/rencode/: constants.rs  de.rs  de_helpers.rs  decode.rs  encode.rs  error.rs  json.rs  mod.rs  ser.rs  value.rs
deluge-rpc/src/transport/: error.rs  mod.rs  reader.rs  transport.rs  verifier.rs  writer.rs
deluge-rpc/tests/: AGENTS.md  live_daemon.rs  torrent_lifecycle.rs
docker/: cli.sh  docker-compose.yaml  source.fish  source.sh
docs/: RECOMMENDATIONS.md  SPEC.md
src/: config.rs  engine.rs  lib.rs  main.rs  mock_daemon.rs  rencode.rs  torrent.rs  tracing_setup.rs  transport.rs
(+26 files in other folders)
