[workspace]
resolver = "2"
members = ["deluge-rpc-rencode", "deluge-rpc-models", "deluge-rpc-client", "deluge-rpc-mock", "deluge-cli"]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Mark Lopez <m@silvenga.com>"]
repository = "https://github.com/Silvenga/deluge-rpc"
homepage = "https://github.com/Silvenga/deluge-rpc"
documentation = "https://github.com/Silvenga/deluge-rpc"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.103"
base64 = "0.22.1"

assert_cmd = "2.2.2"
assert_fs = "1.1.4"
assert_matches = "1.5.0"
bytesize = { version = "2.4.2", features = ["serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
flate2 = "1.1.9"
humantime-serde = "1.1.1"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
mockall = "0.15.0"
rcgen = "0.14.8"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal", "time", "net", "io-util", "sync"] }
tokio-rustls = "0.26.4"
toml = "1.1.2"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
create_dir = "warn"
else_if_without_else = "warn"
filetype_is_file = "warn"
infinite_loop = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

# Pedantic
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
iter_over_hash_type = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
str_to_string = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
wildcard_dependencies = "warn"
redundant_feature_names = "warn"
negative_feature_names = "warn"
cargo_common_metadata = "warn"
absolute_paths = "warn"

# Got annoyed...
module_inception = "allow"
