[package]
name = "deluge-cli"
description = "CLI client for the Deluge daemon RPC protocol"
publish = false
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["deluge", "cli", "rpc", "client"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
deluge-rpc-client = { path = "../deluge-rpc-client", features = ["recorder"] }
deluge-rpc-rencode = { path = "../deluge-rpc-rencode" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1.18"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
flate2 = { workspace = true }
