[package]
name = "deluge-retain"
description = "Automatic torrent retention tool for Deluge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["deluge", "retention"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[dependencies]
deluge-rpc = { path = "../deluge-rpc" }
anyhow = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
humantime-serde = { workspace = true }
log-panics = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
deluge-rpc = { path = "../deluge-rpc", features = ["mock"] }
deluge-rpc-mock = { path = "../deluge-rpc-mock" }
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
assert_matches = { workspace = true }
tokio = { workspace = true }