[package]
name = "deluge-rpc-client"
description = "Client library for the Deluge daemon RPC protocol (TLS + framed zlib + rencode)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/deluge-rpc-client"
readme = "README.md"
keywords = ["deluge", "rpc", "client", "bittorrent"]
categories = ["network-programming", "api-bindings"]

[lints]
workspace = true

[dependencies]

deluge-rpc-rencode = { path = "../deluge-rpc-rencode", version = "0.2.0" }
deluge-rpc-models = { path = "../deluge-rpc-models", version = "0.2.0" }
flate2 = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { version = "0.1.18" }
tracing = { workspace = true }

[features]
recorder = []

[dev-dependencies]
deluge-rpc-mock = { path = "../deluge-rpc-mock" }
rcgen = { workspace = true }
tokio = { workspace = true, features = ["time"] }
