[package]
name = "deluge-rpc-models"
description = "Data models for the Deluge daemon RPC protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/deluge-rpc-models"
readme = "README.md"
keywords = ["deluge", "rpc", "models", "bittorrent"]
categories = ["data-structures", "api-bindings"]

[lints]
workspace = true

[dependencies]
deluge-rpc-rencode = { path = "../deluge-rpc-rencode", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }