[package]
name = "deluge-rpc"
description = "Client library for the Deluge daemon RPC protocol (TLS + framed zlib + rencode)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["deluge", "rpc", "client", "bittorrent"]
categories = ["network-programming", "api-bindings"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
deluge-rencode = { path = "../deluge-rencode" }
deluge-rpc-models = { path = "../deluge-rpc-models" }
flate2 = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
mockall = { workspace = true, optional = true }

[features]
mock = ["dep:mockall"]

[dev-dependencies]
deluge-rpc-mock = { path = "../deluge-rpc-mock" }
mockall = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true, features = ["time"] }
