[package]
name = "deluge-rpc"
description = "Client library for the Deluge daemon RPC protocol (TLS + framed zlib + rencode)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["deluge", "rpc", "client", "bittorrent"]
categories = ["network-programming", "api-bindings"]

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
deluge-rencode = { path = "../deluge-rencode", version = "0.1.0" }
deluge-rpc-models = { path = "../deluge-rpc-models", version = "0.1.0" }
flate2 = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }

[features]
recorder = []

[dev-dependencies]
deluge-rpc-mock = { path = "../deluge-rpc-mock" }
rcgen = { workspace = true }
tokio = { workspace = true, features = ["time"] }
